src/objects/TestObj__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TestObjs</relationshipLabel>
        <relationshipName>TestObjs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chk1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>chk1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>myObj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>myObj</label>
        <referenceTo>myObj__c</referenceTo>
        <relationshipLabel>TestObjs</relationshipLabel>
        <relationshipName>TestObjs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TestObj</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TestObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>testSerialNo</fullName>
        <active>true</active>
        <errorConditionFormula>myObj__r.serailNo__c &gt; 100</errorConditionFormula>
        <errorMessage>serial no cannot be greater than 100</errorMessage>
    </validationRules>
</CustomObject>